--- a/.github/workflows/python-checks.yml
+++ b/.github/workflows/python-checks.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           files: '**/lambda_src/**'
           dir_names: 'true'
+      - name: Install dependencies
+        run: pip install boto3
       - run: scripts/python-checks
         env:
           CHANGED_DIRS: ${{ steps.changed-dirs.outputs.all_changed_files }}
