--- a/.github/workflows/tofu-plan.yml
+++ b/.github/workflows/tofu-plan.yml
@@ -26,6 +26,10 @@ jobs:
         include:
           - app: cdap
             env: mgmt
+          - app: cdap
+            env: prod
+          - app: cdap
+            env: test
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159  # v3.9.2
